@@ -26,19 +26,8 @@ final class Contributors {
     private Contributors() {
     }
 
-    static final Contributor MARCIN_MILKOWSKI = new Contributor("Marcin Miłkowski");
-    static {
-      MARCIN_MILKOWSKI.setUrl("http://marcinmilkowski.pl");
-    }
-
-    static final Contributor DANIEL_NABER = new Contributor("Daniel Naber");
-    static {
-      DANIEL_NABER.setUrl("http://www.danielnaber.de");
-    }
-
-    static final Contributor DOMINIQUE_PELLE = new Contributor("Dominique Pellé");
-    static {
-      DOMINIQUE_PELLE.setUrl("http://dominiko.livejournal.com/tag/lingvoilo");
-    }
+    static final Contributor MARCIN_MILKOWSKI = new Contributor("Marcin Miłkowski", "http://marcinmilkowski.pl");
+    static final Contributor DANIEL_NABER = new Contributor("Daniel Naber", "http://www.danielnaber.de");
+    static final Contributor DOMINIQUE_PELLE = new Contributor("Dominique Pellé", "http://dominiko.livejournal.com/tag/lingvoilo");
 
 }
