@@ -24,10 +24,10 @@ LanguageTool Change Log
     -added many dozens of compound words
 
 -Russian:
-     -added and improved rules
+    -added and improved rules
 
 -Bitext rules:
-     -added a simple rule for checking whether translations end with the same punctuation
+    -added a simple rule for checking whether translations end with the same punctuation
      mark as the original (this includes only .?! characters).
 
 -Spelling:
@@ -42,6 +42,7 @@ LanguageTool Change Log
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
     -Removed (Default)ResourceDataBroker.setResourceDir() and setRulesDir()
      as these can be set with the constructor
+    -Cleaned up up class Contributor, e.g. removing getRemark()
 
 -Embedded server:
     -XML escaping has been fixed, this could cause invalid XML documents
